# Energy-Grid-Simulation-Prototype

./: .gitignore  Dockerfile  README.md  classes.dot  config.yaml  docker-compose.yml  main.py  noxfile.py  packages.dot  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
prosody/: Dockerfile  prosody.cfg.lua  register.lua
src/: simulation_runner.py
src/agents/: component_agent.py  network_agent.py  simple_agent.py  time_agent.py  weather_agent.py
src/agents/common_behaviours/: send_power_update_behaviour.py  subscribeable_behaviour.py  time_keeping_mixin.py
src/agents/interaction_agents/: base_interaction_agent.py  cpo_agent.py
src/agents/prosumption_agents/: base_prosumption_agent.py  charging_station_agent.py  solar_panel_agent.py  wind_turbine_agent.py
src/data/: ClimateNoordBrabant.csv
src/enums/: component_types.py
src/factories/: agent_factory.py  real_agent_factory.py
src/utils/: csv_utils.py  logger.py  service_jids.py
tests/unit/: test_component_agent.py  test_network_agent.py  test_simple_agent.py  test_time_keeping_mixin.py
